# mcp-joplin-streamable-sse

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/mcp_joplin_streamable_sse/: __init__.py  __main__.py  asgi.py  errors.py  joplin_client.py  mcp_server.py  models.py  settings.py
tests/: test_auth.py  test_settings.py
