[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mcp-joplin-streamable-sse"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
	"httpx>=0.27,<1",
	"mcp>=1.26,<2",
	"pydantic>=2.7,<3",
	"pydantic-settings>=2.2,<3",
	"starlette>=0.37,<1",
	"uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
	"mypy>=1.10,<2",
	"pytest>=8.0,<9",
	"pytest-asyncio>=0.23,<1",
	"respx>=0.21,<1",
	"ruff>=0.6,<1",
]

[project.scripts]
mcp-joplin-streamable-sse = "mcp_joplin_streamable_sse.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_joplin_streamable_sse"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
